--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "ai": "^3.2.20",
     "apideck": "^0.1.1",
+    "axios": "^1.7.3",
     "formidable": "^3.5.1",
     "formidable-serverless": "^1.1.1",
     "fs": "^0.0.1-security",
